# dynamic_fiducial

./: README.md
decision_process/: CMakeLists.txt  README.md  README.md~  package.xml
decision_process/data/: camera0_1920x1080.yaml  camera0_800x600.yaml
decision_process/include/decision_process/: decision_process_node.hpp
decision_process/launch/: camera0.launch  single_board.launch
decision_process/src/: decision_process.cpp  decision_process_node.cpp
distance_meas/: CMakeLists.txt  package.xml
distance_meas/cfg/: dynamic_param_config.cfg  dynamic_param_config.cfg~
distance_meas/include/distance_meas/: distancemeasnode.hpp
distance_meas/launch/: camera0.launch  rosa_laptop.launch
distance_meas/src/: distance_meas.cpp  distancemeasnode.cpp
marker_creator_drawing/: app.py~  aruco_gen.py  aruco_gen.py~  image_drawer.py  image_drawer.py~  image_loader.py  listener.py~  pitag_gen.py  pitag_gen.py~  prueba2.py~  utils_python.py
marker_creator_drawing/templates/: index.html  index.html~
marker_creator_library/: image_loader.py  image_loader.py~  image_selector.py  image_selector.py~  utils_python.py
marker_creator_library/templates/: index.html  index.html~
