<?xml version="1.0"?>
<package>
  <name>decision_process</name>
  <version>0.0.0</version>
  <description>The decision_process package</description>

  <maintainer email="rocarlo91@gmail.com">Rosa Maria Carpio Lopez</maintainer>


  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>
  <!-- <build_depend>cob_object_detection_msgs</build_depend> -->
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>tf</run_depend>
  <!-- <run_depend>cob_object_detection_msgs</run_depend> -->



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
